--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="css/styles.min.css" rel="stylesheet">
   </head>
   <body>
     <header class="header">
@@ -331,6 +331,6 @@
       <p><img class="modal__map-img" src="img/map-modal.jpg" width="960" height="559" alt="Наш адрес г. Москва, ул. Строителей, 15"></p>
       <button class="modal__close modal__close--map" type="button">Закрыть</button>
     </section>
-    <script src="js/script.js"></script>
+    <script src="js/scripts.min.js"></script>
   </body>
 </html>
